fixed hero image issues on mobile device

--- a/widgets/hero-sections/HeroHeader.css
+++ b/widgets/hero-sections/HeroHeader.css
@@ -1,6 +1,7 @@
 .custom-image {
   position: relative;
-  height: 30rem;
+  height: 20rem;
+  top: 45px;
 }
 
 .header-font {
@@ -9,15 +10,20 @@
 
 .custom-hero-container {
   display: flex;
-  padding: 2rem 0;
+  padding-top: 2rem;
   flex-direction: column;
   justify-content: center;
+}
+
+.custom-image img {
+  object-fit: cover;
 }
 
 /* if 1 em = 16px [37.5em = 37.5 * 16 = 600px] */
 @media only screen and (min-width: 37.5em) {
   .custom-image {
-    top: 120px;
+    top: 75px;
+    height: 22rem;
   }
   /* Styles for 37.5em and above */
   .custom-hero-container {
@@ -38,6 +44,7 @@
 @media only screen and (min-width: 75em) {
   .custom-image {
     top: 70px;
+    height: 28rem;
   }
 
   /* Styles for 75em and above */
